# UGDownloader

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
UGDownloader/: CTKGUI.py  DLoader.py  DriverSetup.py  GUI.py  UGDownloader.py  UGDownloader.pyw  Utils.py  captcha.py  downloadDemo.py  downloader.py  main.py  pyinst.py  requirements.txt
UGDownloader/_UGDownloaderFiles/: extension_3_4_6_0.crx
pythonProject/: main.py
pythonProject1/: main.py
src/UGDownloader/: CTKGUI.py  DLoader.py  DriverSetup.py  Tab.py  UGDownloader.pyw  Utils.py  pyinst.py  requirements.txt
src/UGDownloader/_UGDownloaderFiles/: config.ini  extension_3_5_0_0.crx
tests/: test_CTKGUI.py
