[metadata]
name = UGDownloader
description = A tool to download all available Guitar Pro files from a particular artist from ultimateguitar.com
author = jabbey1
classifiers =
    Programming Language :: Python :: 3.11

[options]
packages =
    UGDownloader
install_requires =
    PySimpleGUI==4.60.5
    selenium==4.16.0
    webdriver_manager==4.0.1
    requests==2.31.0
    customtkinter==5.1.3
    setuptools==68.1.2
python_requires = >=3.11
package_dir =
    =src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
UGDownloader = py.typed

[flake8]
max-line-length = 160